--- a/index.html
+++ b/index.html
@@ -157,6 +157,6 @@
     </div>
 
     <!-- 别忘了在body底部引入你的JS文件 -->
-    <script src="app.js"></script> 
+    <script src="pen.js"></script> 
 </body>
 </html>
